feats: salvar no banco de dados, listar livros e listar autores